add handler to step integration test